[package]
name = "echo-record"
version = "2.4.0"
authors = ["Spoon Radio <simon@spoonradio.co>"]
edition = "2018"

[dependencies]
log = "^0.4"
anyhow = "^1.0"
tempfile = "3.1"

echo-types = { version = "2.4.0" ,  path = "../echo-types" }
echo-codec = { version = "2.4.0" ,  path = "../echo-codec" }
echo-core = { version = "2.4.0" ,  path = "../echo-core" }
mp4-rs = { version = "0.4.3" , path = "../mp4-rs" , features = [ "async" ] }

[dependencies.tokio]
version = "0.2.21"
default-features = false
features = ["rt-core" ,  "stream" ,  "sync" ,  "time" ,  "io-util" ,  "fs"]
