[package]
name = "echo-transfer"
version = "2.4.0"
authors = ["Spoon Radio <simon@spoonradio.co>"]
edition = "2018"

[dependencies]
actix-web = "3.0.2"
actix-rt = "1.0.0"
actix-service = "1.0.6"
actix-web-httpauth = "0.5.0"
actix-session = "0.4.0"
actix-redis = { version = "0.9.1" ,  features = ["web"] }
actix-cors = "0.5.3"

log = "^0.4"
thiserror = "^1.0"
anyhow = "^1.0"
rand = "0.7.3"
bytes = { version = "^0.5" ,  features = ["serde"] }
serde = { version = "^1.0" ,  features = ["derive"] }
serde_json = "1.0"

adts-reader = "0.3.0"
public-ip = "0.1.0"

echo-types = { version = "2.4.0" ,  path = "../echo-types" }
echo-codec = { version = "2.4.0" ,  path = "../echo-codec" }
echo-core = { version = "2.4.0" ,  path = "../echo-core" }

srt-tokio = { version = "0.1.0" ,  path = "../srt-rs/srt-tokio" }

[dependencies.tokio]
version = "0.2.21"
default-features = false
features = ["rt-core" ,  "sync" ,  "time"]
