[package]
name = "echo-types"
version = "2.4.0"
authors = ["Spoon Radio <simon@spoonradio.co>"]
edition = "2018"

[dependencies]
serde = { version = "^1.0" ,  features = ["derive"] }
bincode = "^1.3"
bytes = { version = "^0.5" ,  features = ["serde"] }
async-trait = "0.1.36"
thiserror = "^1.0"
num-rational = "0.3"
